[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/enemy/moth/Moth.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemy/moth/MothParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/topDownPlayer/DisappearingShader.tres" type="Material" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 9.96953

[sub_resource type="CircleShape2D" id=2]
radius = 11.6263

[sub_resource type="Animation" id=3]
resource_name = "disappear"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("victim:material:shader_param/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0 ]
}

[node name="Moth" type="KinematicBody2D"]
position = Vector2( 0.568764, -0.000167847 )
collision_layer = 0
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.377362, 0.188668 )
scale = Vector2( 4.20751, 4.11317 )

[node name="MothParticles" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.340576, -0.681137 )
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -0.405922, -0.405914 )
shape = SubResource( 2 )

[node name="kill_sprite" type="Sprite" parent="."]
material = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="kill_sprite"]
anims/disappear = SubResource( 3 )

[node name="victim" type="Sprite" parent="kill_sprite"]
visible = false
material = ExtResource( 3 )
vframes = 3
hframes = 10

[node name="3DirSprite" type="Sprite" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="3DirSprite"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="kill_sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
